--- a/css/style.css
+++ b/css/style.css
@@ -37,25 +37,35 @@
 
 
 
-
+#navbar{
+    position: fixed;
+    z-index: 9999;
+    width: 100%;
+}
 
  .popup{
     bottom: 80px;
     right: 10px;
-    height: 450px;
+    height: 0px;
     width: 350px;
     background: #fff;
     position: fixed;
     border-radius: 10px;
     z-index: 9999;
     overflow-y: scroll;
-    border: 1px solid #dde5ed;
+    border: 0px solid #dde5ed;
     margin-bottom: 25px;
     padding: -20px 0px 10px 0px;
-    
-    
+    transition: 1s;
    
         }
+
+.popup1{
+   
+    height: 450px;
+    border: 1px solid #dde5ed;
+    
+}
 /*Fonts*/
         .cls{
             text-align: left;
@@ -1351,12 +1361,14 @@ body {
 
 .progress-container {
     width: 100%;
-    height: 7px;
+    height: 1px;
     background: #ccc;
+    position: fixed;
+    padding-top: 60px;
 }
 
 .progress-bar {
-    height: 7px;
+    height: 1px;
     background: #2BC998;
     max-width: 100%;
     min-width: 0px;
